Fix the submit button style on iOS

--- a/src/css/buttons.scss
+++ b/src/css/buttons.scss
@@ -1,6 +1,7 @@
 button, .button,
 input[type="submit"] {
     border: 1px solid $black;
+    border-radius: 0;
     padding: 10px;
     white-space: nowrap;
     cursor: pointer;
@@ -11,6 +12,7 @@ input[type="submit"] {
     font-weight: 500;
     font-size: $body-font-size;
     letter-spacing: 1.5px;
+    appearance: none;
 
     &:hover:enabled {
         background-color: $black;
